# usbeehive

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
.planning/quick/20260513-devices2-structured-wire/: CONTEXT.md  PLAN.md  SUMMARY.md
.planning/quick/20260526-devices3-wire-v3/: PLAN.md  SUMMARY.md
.planning/quick/260610-pd-partner-pairing-cable-checks/: PLAN.md  SUMMARY.md
.planning/quick/260610-port-usb-correlation/: PLAN.md  SUMMARY.md
.planning/quick/260616-box-emit-devicechanged-signal-so-consumers-r/: 260616-box-PLAN.md  260616-box-SUMMARY.md
crates/whatcable-cli/: Cargo.toml  README.md
crates/whatcable-cli/src/: main.rs  output.rs
crates/whatcable-cli/tests/: cli_smoke.rs
crates/whatcable-core/: Cargo.toml  README.md
crates/whatcable-core/examples/: cable_info.rs  decode_cable_vdo.rs
crates/whatcable-core/src/: cable.rs  diagnostic.rs  lib.rs  pd.rs  power.rs  summary.rs  typec.rs  usb.rs  usbclass.rs  vendor.rs
crates/whatcable-sysfs/: Cargo.toml  README.md
crates/whatcable-sysfs/examples/: list_devices.rs  snapshot_diff.rs
crates/whatcable-sysfs/src/: lib.rs  manager.rs  power.rs  sysfs.rs  typec.rs  usb.rs
crates/whatcable-sysfs/tests/: fixture_builder.rs  typec_pd_scenarios.rs  usb_enumeration.rs
crates/whatcable-watch/: Cargo.toml  README.md
crates/whatcable-watch/examples/: print_changes.rs
crates/whatcable-watch/src/: lib.rs
docs/: ROADMAP.md
examples/: cable_info.rs  dbus_client.rs  decode_cable_vdo.rs  list_devices.rs  print_changes.rs  snapshot_diff.rs
src/: cable.rs  dbus.rs  diagnostic.rs  lib.rs  main.rs  manager.rs  monitor.rs  output.rs  pd.rs  power.rs  summary.rs  sysfs.rs  thunderbolt.rs  typec.rs  usb.rs  usbclass.rs  vendor.rs  watch.rs
src/cli/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  CableInfo.cpp  CableInfo.h  ChargingDiagnostic.cpp  ChargingDiagnostic.h  DeviceManager.cpp  DeviceManager.h  DeviceSummary.cpp  DeviceSummary.h  PDDecoder.cpp  PDDecoder.h  PowerDelivery.cpp  PowerDelivery.h  SysfsReader.cpp  SysfsReader.h  TypeCPort.cpp  TypeCPort.h  UDevMonitor.cpp  UDevMonitor.h  UsbClassDB.cpp  UsbClassDB.h  UsbDevice.cpp  UsbDevice.h  VendorDB.cpp  VendorDB.h
src/sysfs/: error.rs  manager.rs  mod.rs  power.rs  reader.rs  thunderbolt.rs  typec.rs  usb.rs
systemd/: usbeehived.service
tests/: cli_smoke.rs  dbus_interface.rs  fixture_builder.rs  typec_pd_scenarios.rs  usb_enumeration.rs
