[workspace]
resolver = "2"
members = [
    "crates/whatcable-core",
    "crates/whatcable-sysfs",
    "crates/whatcable-watch",
    "crates/whatcable-cli",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MIT"
authors = ["Andreas Brauchli"]
repository = "https://github.com/Zetaphor/whatcable-linux"
homepage = "https://github.com/Zetaphor/whatcable-linux"
rust-version = "1.74"
keywords = ["usb", "usb-c", "power-delivery", "sysfs", "cli"]
categories = ["command-line-utilities", "hardware-support", "os::linux-apis"]

[workspace.dependencies]
whatcable-core = { version = "0.3.0", path = "crates/whatcable-core" }
whatcable-sysfs = { version = "0.3.0", path = "crates/whatcable-sysfs" }
whatcable-watch = { version = "0.3.0", path = "crates/whatcable-watch" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
udev = "0.9"
libc = "0.2"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
