[package]
name = "usbeehive"
version = "0.7.0"
edition = "2021"
license = "MIT"
authors = ["Andreas Brauchli"]
description = "Tells you what each USB cable / device on Linux can actually do. Rust port of WhatCable; previously published as `whatcable`."
repository = "https://github.com/abrauchli/usbeehive"
homepage = "https://github.com/abrauchli/usbeehive"
readme = "README.md"
rust-version = "1.85"
keywords = ["usb", "usb-c", "power-delivery", "sysfs", "cli"]
categories = ["command-line-utilities", "hardware-support", "os::linux-apis"]

[lib]
name = "usbeehive"
path = "src/lib.rs"

[[bin]]
name = "usbeehive"
path = "src/main.rs"
required-features = ["cli"]

[[bin]]
name = "usbeehived"
path = "src/bin/usbeehived.rs"
required-features = ["dbus"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
udev = { version = "0.9", optional = true }
libc = { version = "0.2", optional = true }
zbus = { version = "5", optional = true }

[dev-dependencies]
serde_json = "1"

[features]
default = ["cli", "sysfs", "watch"]
# `sysfs` enables the Linux /sys backend (Sysfs, DeviceManager, Snapshot).
# Disable to use the crate as a pure-decoder library.
sysfs = []
# `watch` enables the libudev hotplug monitor (Watcher, run_loop).
watch = ["dep:udev", "dep:libc", "sysfs"]
# `cli` enables the `usbeehive` binary.
cli = ["dep:serde_json", "dep:clap", "sysfs"]
# `dbus` enables the `usbeehive::dbus` interface module and the `usbeehived`
# binary that exposes `org.usbeehive.Devices3` on the session bus. Implies
# `watch` (and therefore `sysfs`) so the daemon has a live snapshot.
dbus = ["dep:zbus", "dep:serde_json", "watch"]

[[example]]
name = "list_devices"
required-features = ["sysfs"]

[[example]]
name = "snapshot_diff"
required-features = ["sysfs"]

[[example]]
name = "print_changes"
required-features = ["watch"]

[[example]]
name = "dbus_client"
required-features = ["dbus"]

[lints.rust]
missing_docs = "warn"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
