[package]
name = "whatcable"
description = "Tells you what each USB cable / device on Linux can actually do. Rust port of WhatCable."
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "whatcable"
path = "src/main.rs"

[dependencies]
whatcable-core = { workspace = true }
whatcable-sysfs = { workspace = true }
whatcable-watch = { workspace = true, optional = true }
clap = { workspace = true }
serde_json = { workspace = true }

[features]
default = ["watch"]
watch = ["dep:whatcable-watch"]
