[package]
name = "whatcable-core"
description = "Pure-data types and decoders for USB / USB-C / USB Power Delivery — the IO-free heart of WhatCable."
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde = { workspace = true }

[lints.rust]
missing_docs = "warn"
