[package]
name = "whatcable-watch"
description = "libudev hotplug monitor for WhatCable's USB and Type-C subsystems."
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
udev = { workspace = true }

[lints.rust]
missing_docs = "warn"
